# goddamneye

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  config.py  main.py
backend/api/: __init__.py  dependencies.py
backend/api/routes/: __init__.py  cameras.py  recordings.py  streams.py  system.py
backend/core/: __init__.py  database.py  security.py
backend/models/: __init__.py  camera.py  recording.py
backend/schemas/: __init__.py  camera.py  recording.py
backend/services/: __init__.py  camera_manager.py  onvif_discovery.py  storage_manager.py  stream_worker.py
backend/utils/: __init__.py  ffmpeg.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/Camera/: CameraCard.tsx  CameraForm.test.tsx  CameraForm.tsx  CameraGrid.tsx
frontend/src/components/Layout/: AppLayout.tsx  AppMenu.tsx
frontend/src/components/Recordings/: RecordingPlayer.tsx  RecordingsTable.tsx
frontend/src/components/Video/: VideoControls.tsx  VideoPlayer.tsx
frontend/src/hooks/: useApi.ts  useCameras.ts
frontend/src/pages/: Cameras.tsx  Dashboard.tsx  Recordings.tsx  Settings.tsx
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
tests/: __init__.py  conftest.py  test_scenarios.feature
tests/test_api/: test_camera_probe.py  test_cameras.py  test_stream_lifecycle.py  test_system.py
tests/test_services/: test_recording_encoding.py  test_stream_worker.py
